@@ -182,7 +182,12 @@ vocabularies get [
     [ "set-alien-signed-1" "alien"            [ [ integer alien integer ] [ ] ] ]
     [ "alien-unsigned-1" "alien"              [ [ alien integer ] [ integer ] ] ]
     [ "set-alien-unsigned-1" "alien"          [ [ integer alien integer ] [ ] ] ]
-    [ "alien-value-string" "alien"            [ [ alien integer ] [ string ] ] ]
+    [ "alien-float" "alien"                   [ [ alien integer ] [ float ] ] ]
+    [ "set-alien-float" "alien"               [ [ float alien integer ] [ ] ] ]
+    [ "alien-double" "alien"                  [ [ alien integer ] [ float ] ] ]
+    [ "set-alien-double" "alien"              [ [ float alien integer ] [ ] ] ]
+    [ "alien-c-string" "alien"                [ [ alien integer ] [ string ] ] ]
+    [ "set-alien-c-string" "alien"            [ [ string alien integer ] [ ] ] ]
     [ "throw" "errors"                        [ [ object ] [ ] ] ]
     [ "string>memory" "kernel-internals"      [ [ string integer ] [ ] ] ]
     [ "memory>string" "kernel-internals"      [ [ integer integer ] [ string ] ] ]
