@@ -52,4 +52,9 @@ void primitive_alien_signed_1(void);
 void primitive_set_alien_signed_1(void);
 void primitive_alien_unsigned_1(void);
 void primitive_set_alien_unsigned_1(void);
-void primitive_alien_value_string(void);
+void primitive_alien_float(void);
+void primitive_set_alien_float(void);
+void primitive_alien_double(void);
+void primitive_set_alien_double(void);
+void primitive_alien_c_string(void);
+void primitive_set_alien_c_string(void);
