@@ -148,7 +148,12 @@ void* primitives[] = {
 	primitive_set_alien_signed_1,
 	primitive_alien_unsigned_1,
 	primitive_set_alien_unsigned_1,
-	primitive_alien_value_string,
+	primitive_alien_float,
+	primitive_set_alien_float,
+	primitive_alien_double,
+	primitive_set_alien_double,
+	primitive_alien_c_string,
+	primitive_set_alien_c_string,
 	primitive_throw,
 	primitive_string_to_memory,
 	primitive_memory_to_string,
